// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ExpensesSummary with expense 1`] = `
<div>
  <p>
    Viewing 
    3
     expenses totalling 
    $1,141.95
  </p>
</div>
`;

exports[`should render ExpensesSummary with no expense 1`] = `
<div>
  <p>
    Viewing 
    0
     expenses totalling 
    $0.00
  </p>
</div>
`;

exports[`should render ExpensesSummary with one expense 1`] = `
<div>
  <p>
    Viewing 
    1
     expenses totalling 
    $1,095.00
  </p>
</div>
`;
